# vlogrs

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  Taskfile.yaml  bootstrap.ps1  config.yaml  generate_photo.py  pyproject.toml  run.bat  run.cmd  run.ps1  view_logs.py  vlog-daily.service  vlog.service
.agent/skills/autonomous-skill-creator/: SKILL.md
.agent/skills/gemini-3/: SKILL.md
.agent/skills/io-manager/: SKILL.md
.agent/skills/media-expert/: SKILL.md
.agent/skills/media_expert/: SKILL.md
.agent/skills/narrative-curator/: SKILL.md
.agent/skills/narrative_curator/: SKILL.md
.agent/skills/ollama-gpt-oss-fallback/: SKILL.md
.agent/skills/photo-pipeline/: SKILL.md
.agent/skills/rust-iron-rules/: SKILL.md
.agent/skills/rust-maintenance/: SKILL.md
.agent/skills/rust_iron_rules/: SKILL.md
.agent/skills/systemd-maintenance/: SKILL.md
.agent/skills/theme-factory/: SKILL.md
.agent/skills/vlog-manager/: SKILL.md
.agent/skills/windows-cmd-ps1-ops/: SKILL.md
.agent/skills/windows-cmd-ps1-ops/agents/: openai.yaml
.agent/skills/windows-cmd-ps1-ops/references/: error-map.md
.agent/skills/wsl-path-bridge/: SKILL.md
.agent/workflows/: agentic-management.md  agentic-optimization.md  git.md  refactor.md  vlog.md
.github/workflows/: ci.yml  lint.yml
data/: config.yaml  prompts.yaml  tasks.json  tasks.json.old
data/archives/: 20251125_211140.flac
docs/: MASTER.md  architecture.md  customer_journey.md  gemini.md  image.md  overview.md
docs/milestones/: 2026-02-18.md  2026-02-19.md
docs/protocols/: zero_ops_autopilot.md
docs/specs/: DESIGN_SYSTEM.md  architecture.md  flac.md  image.md  overview.md  windows_logger.md
docs/usecases/: ai_glass.md  autonomous_standards.md  discord.md  mobile_life.md  vrchat.md
frontend/reader/: README.md  next.config.ts  package-lock.json  package.json
frontend/reader/app/: globals.css  layout.tsx  page.tsx
frontend/reader/lib/: supabaseClient.ts
scripts/: install_services.sh  preprocess_transcript.py  update_image_urls.py
src/: README.md  app.py  cli.py  domain.rs  infrastructure.rs  main.py  main.rs  sync_supabase.py  use_cases.rs  view_logs.py
src/cli/: doctor.rs  evaluate.rs  mod.rs  monitor.rs  novel.rs  process.rs  record.rs  setup.rs  status.rs  sync.rs  worker.rs
src/domain/: README.md  constants.rs  entities.py  event.rs  interfaces.py  task.rs
src/infrastructure/: README.md  ai.py  ai.rs  api.rs  audio.rs  audio_recorder.py  diary_writer.py  fs_utils.rs  image_generator.py  image_generator_gemini_prompt.txt  image_generator_negative_prompt.txt  image_generator_prompt.txt  jules.py  llm.rs  novelizer.py  novelizer_prompt.txt  observability.py  preprocessor.py  preprocessor.rs  process.rs  process_monitor.py  prompts.rs  repositories.py  settings.py  settings.rs  summarizer.py  summarizer_prompt.txt  supabase_repository.py  system.py  task_repository.py  tasks.rs  transcriber.py  transcription.rs  watcher.rs
src/infrastructure/audio/: mod.rs  normalizer.rs  recorder.rs  utils.rs
src/infrastructure/db/: mod.rs  schema.sql
src/scripts/: README.md  generate_missing_content.py  image_gen.py
src/services/: README.md  processor_service.py  recorder_service.py
src/use_cases/: README.md  build_novel.py  build_novel.rs  doctor.rs  evaluate.py  evaluate.rs  health.rs  monitor.rs  pending.rs  process.rs  process_recording.py  setup.rs  status.rs  sync.rs  sync_activity.rs  synthesis.rs  task_runner.rs  transcode.rs
src/use_cases/mbti/: README.md  each.py  overall.py
src/windows/: SKILL.md  audio_recorder.py
src/windows/agent/: Cargo.toml
src/windows/agent/src/: main.rs
src/windows/audio/: bootstrap.ps1  pyproject.toml
src/windows/audio/scripts/: recorder.py
src/windows/rust/: bootstrap.ps1
supabase/: schema.sql
systemd/: vlog-daily.service  vlog-daily.timer  vlog-monitor.service  vlog.service
tests/: README.md  conftest.py
tests/infrastructure/: README.md  test_audio_recorder.py  test_transcriber.py
tests/services/: README.md  test_processor_service.py  test_recorder_service.py
transcripts/: 20251216_200411.txt
windows/: README.md  bootstrap.bat  run.bat
