[package]
name = "vlog-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4", "v7"] }
postgrest = "1.6" # Supabase client
# whisper-rs = "0.11" # Whisper.cpp bindings (requires libclang)
cpal = "0.15" # Audio recording
hound = "3.5" # WAV file manipulation
sysinfo = "0.30" # Process monitoring
config = { version = "0.13", features = ["yaml"] }
serde_yaml = "0.9"
regex = "1.12.3"
base64 = "0.21"
async-trait = "0.1.89"
