[project]
name = "vlog"
version = "0.1.0"
description = "VRChat Auto-Diary"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
    "faster-whisper>=0.10.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "supabase>=2.0.0",
    "nvidia-cublas-cu12>=12.1.3.1",
    "nvidia-cudnn-cu12>=9.1.0.70",
    "torch>=2.5.1",
    "diffusers @ git+https://github.com/huggingface/diffusers",
    "transformers>=4.46.3",
    "huggingface-hub>=0.26.2",
    "accelerate>=1.1.1",
    "sentencepiece>=0.2.0",
    "pydantic-settings>=2.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
